Fixed syntax errors in bank post

--- a/_posts/HackTheBox/2020-04-16-bank.md
+++ b/_posts/HackTheBox/2020-04-16-bank.md
@@ -37,10 +37,10 @@ Service detection performed. Please report any incorrect results at https://nmap
 Nmap done: 1 IP address (1 host up) scanned in 16.52 seconds
 ```
 
-Normally DNS is UDP by default but falls back to TCP when the packet size is too large (>512 bytes). **When will TCP exceed 512 bytes?** Classically speaking, in a zone transfer where one DNS server sends its entire database (resource records) to another machine, usually another DNS server. Although with the rise of IPv6, spam detection and DNSSEC, TCP is increasingly being used. Usually a zone transfer is normal operation between primary and secondary DNS servers in order to synchronise the records for a domain. This is typically not something you want to be accessed externally because if an attacker can gather all your DNS records, they can use those to select targets for exploitation. <a href="https://hackertarget.com/zone-transfer/">Zone Transfers</a>  https://hackertarget.com/zone-transfer/
+Normally DNS is UDP by default but falls back to TCP when the packet size is too large (>512 bytes). **When will UDP exceed 512 bytes?** Classically speaking, in a zone transfer where one DNS server sends its entire database (resource records) to another machine, usually another DNS server. Although with the rise of IPv6, spam detection and DNSSEC, TCP is increasingly being used. Usually a zone transfer is normal operation between primary and secondary DNS servers in order to synchronise the records for a domain. This is typically not something you want to be accessed externally because if an attacker can gather all your DNS records, they can use those to select targets for exploitation. <a href="https://hackertarget.com/zone-transfer/" target="_blank_">Zone Transfers</a>
 
 
-Useful website that highlights the security risk of having zone transfer enabled and how it can leak sensitive information: <a href="https://digi.ninja/projects/zonetransferme.php">digi.ninja</a>
+A useful website that highlights the security risk of having zone transfer enabled and how it can leak sensitive information: <a href="https://digi.ninja/projects/zonetransferme.php" target="_blank_">digi.ninja</a>
 
 
 # DNS Enumeration - NSLookup
@@ -52,7 +52,7 @@ Default server: 10.10.10.29
 Address: 10.10.10.29#53
 > 
 > 10.10.10.29
-** server can't find 29.10.10.10.in-addr.arpa: NXDOMAIN  (NO REVERSE DNS LOOKUP)
+** server cant find 29.10.10.10.in-addr.arpa: NXDOMAIN  (NO REVERSE DNS LOOKUP)
 > 
 > 127.0.0.1
 1.0.0.127.in-addr.arpa  name = localhost. (DIDN’T GET LUCKY WITH A HOSTNAME)
@@ -65,7 +65,7 @@ Name:   bank.htb
 Address: 10.10.10.29
 ```
 
-The default name server for all HackTheBox machines is **<name of box>.htb** so I tried that and got a response.
+The default name server for all HackTheBox machines is ```<name of box>.htb``` so I tried that and got a response.
 
 
 # DNS Enumeration - dig
@@ -156,11 +156,11 @@ Target: http://bank.htb/
 Task Completed
 ```
 
-The output of dirsearch shows a few redirects occuring. Lets stop index.php redirecting using Burpsuite.
+The output of dirsearch shows a few redirects occuring so I can stop these redirects using Burpsuite.
 
 # Stopping Redirects using Burpsuite
 
-I’m going to stop the index.php redirect first of all and to perform this, catch the initial request and then, go to Actions --> Do intercept --> Response to this request then replace ```HTTP/1.1 302 Found``` with ```HTTP/1.1 200 OK``` and then forward. To do this automatically for every page, from the proxy tab at the top go to options then “Match and Replace”, put in your rule, make sure its enabled and then turn intercept off. The rule you can see below.
+I’m going to stop the index.php redirect first of all and to perform this, catch the initial request and then go to Actions --> Do intercept --> Response to this request then replace ```HTTP/1.1 302 Found``` with ```HTTP/1.1 200 OK``` and then forward. To do this automatically for every page, from the proxy tab at the top go to options then “Match and Replace”, put in your rule, make sure its enabled and then turn intercept off. The rule you can see below.
 
 ![image]({{site.github.url}}/assets/img/htb/bank/replace302.png)
 
@@ -201,7 +201,7 @@ Having RCE, its time to get a shell into the machine. I setup my listener and co
 
 | ![image]({{site.github.url}}/assets/img/htb/bank/rce.png) |
 | :--: |
-| *Executing commands as user www-data* |![image]({{site.github.url}}/assets/img/htb/bank/rce.png)
+| *Executing commands as user www-data* |
 
 That sigh of relief once you catch that reverse shell makes all the work worth it but I'd rather much operate in a fully interactive TTY shell so its time to upgrade. 
 
@@ -261,11 +261,11 @@ Nope, no luck. We could try to SSH in using those credentials.
 
 ```bash
 ssh root@bank.htb
-root@bank.htb's password: 
+root@bank.htbs password: 
 Permission denied, please try again.
 
 ssh chris@bank.htb
-chris@bank.htb's password: 
+chris@bank.htbs password: 
 Permission denied, please try again.
 ```
 
@@ -273,8 +273,8 @@ And another dead end. Might be time to use some priv esc tools but before I do t
 
 ### Searching files with SUID & SGID bit set
 
-Finding SGID bit files: ```www-data@bank: find / -perm -2000 -type f -exec ls -la {} 2>/dev/null \;```
-Finding SUID bit files: ```www-data@bank: find / -perm -4000 -type f -exec ls -la {} 2>/dev/null \;```
+- Finding SGID bit files: ```www-data@bank: find / -perm -2000 -type f -exec ls -la {} 2>/dev/null \;``` 
+- Finding SUID bit files: ```www-data@bank: find / -perm -4000 -type f -exec ls -la {} 2>/dev/null \;```
 
 ```bash
 www-data@bank: find / -perm -4000 -type f -exec ls -la {} 2>/dev/null \;
