Updated post for Intro into embedded linux for rpi

--- a/_posts/EmbeddedLinux/2020-04-23-intro.md
+++ b/_posts/EmbeddedLinux/2020-04-23-intro.md
@@ -16,13 +16,13 @@ Starting off in embedded Linux I’d recommend getting this <a href="https://www
 Building an embedded Linux distro requires four main elements:
 
 1. Toolchain
-A set of tools required to build and compile your source code that will be able to run on the target device. The tools include a compiler, a linker and various run-time libraries. I will be using a cross-compilation toolchain that will compile the code on my host machine (Ubuntu 18 VM) that then will run on the target (Raspberry Pi 3B).
+- A set of tools required to build and compile your source code that will be able to run on the target device. The tools include a compiler, a linker and various run-time libraries. I will be using a cross-compilation toolchain that will compile the code on my host machine (Ubuntu 18 VM) that then will run on the target (Raspberry Pi 3B).
 
 2. Bootloader
-This initializes the system and loads the kernel into memory. The ability to hand off control to the kernel is achieved through device trees, a data structure (hierarchical nodes which resembles a tree) that defines the hardware.
+- This initializes the system and loads the kernel into memory. The ability to hand off control to the kernel is achieved through device trees, a data structure (hierarchical nodes which resembles a tree) that defines the hardware.
 
 3. Kernel
 - The heart of the operating system. It is responsible for managing resources, interfacing with hardware and it provides an API that allows users to interact with the kernel space from a command shell (user space). 
 
 4. Root filesystem
-The final element which provides the kernel with the required libraries and program that will be run after kernel initialization. The kernel will either mount the root filesystem in RAM, known as an initial RAM filesystem (initramfs), from the bootloader or it will mount it from a block device such as an SD card or it can be mounted over the network (NFS – Network Filesystem).
+- The final element which provides the kernel with the required libraries and program that will be run after kernel initialization. The kernel will either mount the root filesystem in RAM, known as an initial RAM filesystem (initramfs), from the bootloader or it will mount it from a block device such as an SD card or it can be mounted over the network (NFS – Network Filesystem).
