Fixed broken for loop for embedded posts in project page

--- a/_posts/EmbeddedLinux/2020-04-23-intro.md
+++ b/_posts/EmbeddedLinux/2020-04-23-intro.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Introduction into Embedded Linux"
 author: "Emmet Friel"
-categories: rpi-embedded
+categories: rpiembedded
 image: rpi-linux/Embedded-Linux.png
 ---
 
