Updated Stuff page name to Posts with listing posts in chronological order by date. Added archives page

--- a/_posts/HackTheBox/2020-04-13-arctic.md
+++ b/_posts/HackTheBox/2020-04-13-arctic.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "HackTheBox Walkthrough - Arctic"
+title: "Arctic"
 author: "Emmet Friel"
 categories: HackTheBox
 image: htb/arctic/arctic.png
