--- a/_posts/HackTheBox/2020-04-16-bank.md
+++ b/_posts/HackTheBox/2020-04-16-bank.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "HackTheBox Walkthrough - Bank"
+title: "Bank"
 author: "Emmet Friel"
 categories: HackTheBox
 image: htb/bank/bank.png
