Removed Contacts page from website, md page is still there if I wish to put it back up. Renamed HTB post titles

--- a/_posts/HackTheBox/2020-04-16-bank.md
+++ b/_posts/HackTheBox/2020-04-16-bank.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Bank"
+title: "HTB: Bank Walkthrough"
 author: "Emmet Friel"
 categories: HackTheBox
 image: htb/bank/bank.png
