--- a/_posts/HackTheBox/2020-04-13-arctic.md
+++ b/_posts/HackTheBox/2020-04-13-arctic.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Arctic"
+title: "HTB: Arctic Walkthrough"
 author: "Emmet Friel"
 categories: HackTheBox
 image: htb/arctic/arctic.png
