--- a/_posts/OT/2023-10-13-timesync.md
+++ b/_posts/OT/2023-10-13-timesync.md
@@ -23,8 +23,10 @@ For accurate time synchronization we need a time source.
 
 **Where do we get an accurate time source?**
 
-Space, mostly or atomic clocks. 
-Atomic clocks are usually used in places that GPS can't reach such as underwater oil, military navigation etc.
+Satellites, mostly or atomic clocks. 
+Atomic clocks are usually used in places that GPS can't reach such as underwater oil, military navigation etc. <br>
+
+Time is typically sourced from GPS (Global Positioning System), a satellite based positioning, navigation and timing (PNT) system.
 
 
 
