updated blog and added imgs

--- a/_posts/OT/2023-10-13-timesync.md
+++ b/_posts/OT/2023-10-13-timesync.md
@@ -6,28 +6,40 @@ categories: OT
 image: OT/timesync/white_rabbit.jpeg
 ---
 
-Everything that we take for granted from the electricity that powers our homes, browsing the internet, calling a friend on your mobile phone, tracking taxis on Uber, purchasing items online all require some form of accurate timing, navigation and positional (PNT) services. In addition to power grids, we heavily rely on other infrastructure such as hospitals, water-systems, transport networks, manufacturing and agriculture. These critical infrastructures are an essential part of a functioning society which ultimately life depends on and so the need to protect these infrastructures are of upmost importance and of national concern.<br> 
+Everything that we take for granted from the electricity that powers our homes, browsing the internet, calling a friend on your mobile phone, tracking taxis on Uber, purchasing items online all require some form of postitional, navigation and timing (PNT) services. In addition to power grids, we heavily rely on other infrastructure such as hospitals, water-systems, transport networks, manufacturing and agriculture. These critical infrastructures are an essential part of a functioning society which ultimately life depends on and so the need to protect these infrastructures are of upmost importance and of national concern.
 
-**So, what does time keeping have to do with critical infrastrucuture?** <br>
+**So, what does time keeping have to do with critical infrastrucuture?**
 
-Under the hood of each of these infrastructures is a web of complex interconnected cyber-physical systems that require 24/7/365 availability. Time synchronization, more importantly accurate and reliable time synchronization, is an essential part of these systems. Without accurate time signals being supplied and distributed across these systems could cause cataclysmic system failures such as:
+Under the hood of each of these infrastructures is a web of complex interconnected cyber-physical systems that require 24/7/365 availability. Time synchronization, more importantly accurate and reliable time synchronization, is an essential part of these systems. Without accurate time signals being supplied and distributed across these systems it could cause cataclysmic system failures such as:
  
-- Blackouts on the power grid and massive power outages
-- Disrupting financial markets such as stock markets, finanical transactions and other trading platforms which rely on precise timing
-- Failing medical devices used for patient care, monitoring, treatment and diagnosis 
+- Blackouts on the power grid and massive power outages. [Paper](https://www.mdpi.com/1996-1073/15/18/6799)
+- Disrupting financial markets such as stock markets, finanical transactions and other trading platforms. Here is an example of the Dow ["flash crash"](https://radionavlab.ae.utexas.edu/images/stories/files/papers/summary_financial_sector_implications.pdf)
+- Interrupt remote robotic surgeries in hospitals, scheduling systems and medical devices used for patient care, monitoring, treatment and diagnosis. [Link1](https://timemachinescorp.com/2018/01/17/time-synchronization-crucial-healthcare-industry/),[Link2](https://safran-navigation-timing.com/synchronized-time-improves-healthcare/)  
 - Unavailable service from mobile operators causing dropped calls and slow internet speed
 - Traffic accidents and delays as traffic management systems depend on accurate timekeeping.
 
 It wouldn't be Armageddon but it would not be a situation that any society could afford to happen.
-For accurate time synchronization we need a time source.
+For accurate time synchronization to occur, we need a time source.
 
 **Where do we get an accurate time source?**
 
 Satellites, mostly or atomic clocks. 
-Atomic clocks are usually used in places that GPS can't reach such as underwater oil, military navigation etc. <br>
+Atomic clocks are usually used in places that GPS can't reach such as underwater oil rigs, military navigation etc. <br>
 
-Time is typically sourced from GPS (Global Positioning System), a satellite based positioning, navigation and timing (PNT) system.
+| ![image]({{site.github.url}}/assets/img/OT/timesync/gps.jpg){:style="display:block; margin-left:auto; margin-right:auto"} |
+|:--:|
+| *Illustrating how GPS works. [1]*|
 
 
+Time in critical infrastuctures is typically sourced from GPS (Global Positioning System), a satellite based positioning, navigation and timing (PNT) system. GPS is vulnerable to jamming attacks albiet illegal, the equipment can be purchased online and GPS spoofers can be created using inexpensive off the shelf equipment with no little know-how. These type of attacks on GPS could have catastrophic impacts on critical infrastructre. A 2019 study estimated that if a 30 day GPS outage occured on several critical infrastructures it would cost the U.S. economy at least $1 billion per day. Here is the full [RTI report.](https://www.rti.org/news/new-report-reveals-economic-benefits-private-sector-use-gps) 
+
+**Can we use time sources other than GPS in critical infrastructures?**
+
+
+
+
+## References
+
+[1] - 
 
 
