added photo and updated time sync blog

--- a/_posts/OT/2023-10-13-timesync.md
+++ b/_posts/OT/2023-10-13-timesync.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Why is Resilient Time Keeping Important For Creating Resilient Critical Infrastructure?"
+title: "Why is Resilient Timekeeping Important For Creating Resilient Critical Infrastructure?"
 author: "Emmet Friel"
 categories: OT
 image: OT/timesync/white_rabbit.jpeg
@@ -10,36 +10,48 @@ Everything that we take for granted from the electricity that powers our homes, 
 
 **So, what does time keeping have to do with critical infrastrucuture?**
 
-Under the hood of each of these infrastructures is a web of complex interconnected cyber-physical systems that require 24/7/365 availability. Time synchronization, more importantly accurate and reliable time synchronization, is an essential part of these systems. Without accurate time signals being supplied and distributed across these systems it could cause cataclysmic system failures such as:
+Under the hood of each of these infrastructures is a web of complex interconnected cyber-physical systems that require 24/7/365 availability. Time synchronization, more importantly accurate and reliable time synchronization, is an essential part of what makes these systems tick. Without accurate time signals being supplied and distributed across these systems it could cause cataclysmic system failures such as:
  
 - Blackouts on the power grid and massive power outages. [Paper](https://www.mdpi.com/1996-1073/15/18/6799)
 - Disrupting financial markets such as stock markets, finanical transactions and other trading platforms. Here is an example of the Dow ["flash crash"](https://radionavlab.ae.utexas.edu/images/stories/files/papers/summary_financial_sector_implications.pdf)
 - Interrupt remote robotic surgeries in hospitals, scheduling systems and medical devices used for patient care, monitoring, treatment and diagnosis. [Link1](https://timemachinescorp.com/2018/01/17/time-synchronization-crucial-healthcare-industry/),[Link2](https://safran-navigation-timing.com/synchronized-time-improves-healthcare/)  
-- Unavailable service from mobile operators causing dropped calls and slow internet speed
+- Disrupting Telecom operators causing dropped calls and slow internet speed.
 - Traffic accidents and delays as traffic management systems depend on accurate timekeeping.
 
 It wouldn't be Armageddon but it would not be a situation that any society could afford to happen.
 For accurate time synchronization to occur, we need a time source.
 
-**Where do we get an accurate time source?**
+**Where do we get a time source?**
 
 Satellites, mostly or atomic clocks. 
 Atomic clocks are usually used in places that GPS can't reach such as underwater oil rigs, military navigation etc. <br>
 
 | ![image]({{site.github.url}}/assets/img/OT/timesync/gps.jpg){:style="display:block; margin-left:auto; margin-right:auto"} |
 |:--:|
-| *Illustrating how GPS works. [1]*|
+| *Illustrating how GPS works*|
 
 
-Time in critical infrastuctures is typically sourced from GPS (Global Positioning System), a satellite based positioning, navigation and timing (PNT) system. GPS is vulnerable to jamming attacks albiet illegal, the equipment can be purchased online and GPS spoofers can be created using inexpensive off the shelf equipment with no little know-how. These type of attacks on GPS could have catastrophic impacts on critical infrastructre. A 2019 study estimated that if a 30 day GPS outage occured on several critical infrastructures it would cost the U.S. economy at least $1 billion per day. Here is the full [RTI report.](https://www.rti.org/news/new-report-reveals-economic-benefits-private-sector-use-gps) 
+Time in critical infrastuctures is typically sourced from GPS (Global Positioning System), a type of satellite based positioning, navigation and timing (PNT) system. The current problem with GPS within critical infrastructures is that these infrastructures are far [too reliant on GPS](https://wsts.atis.org/wp-content/uploads/2022/05/01-James-Platt.Over-Reliance-on-the-GPS-System-.pdf) with many systems having no backup alternative to this single point of failure if GPS is disrupted. Adding to the fact the huge [security threats GPS pose](https://www.securitymagazine.com/blogs/14-security-blog/post/98179-global-navigation-in-cyberspace-gps-and-threats-to-national-defense) such as jamming attacks and GPS spoofers which can be created using inexpensive off the shelf equipment with no little know-how. These type of attacks on GPS could have catastrophic impacts on critical infrastructre. 
 
-**Can we use time sources other than GPS in critical infrastructures?**
+A 2019 study estimated that if a 30 day GPS outage occured on several critical infrastructures it would cost the U.S. economy at least $1 billion per day. Here is the full [RTI report.](https://www.rti.org/news/new-report-reveals-economic-benefits-private-sector-use-gps) 
 
+**I can start to see the fine dance between time within our critical infrastructures but what can we do about it?**
 
+One of the efforts being spearheaded by NIST is to develop non-GPS based alternatives as well as developing systems that distribute time via fiber-optics and radio to back up GPS and bolster resilency.
 
+![image]({{site.github.url}}/assets/img/OT/timesync/gps_meme.png){:style="display:block; margin-left:auto; margin-right:auto"}
 
-## References
+<br>
 
-[1] - 
+Governments around the world are already making strides building out their own National Timing Grid. An entire grid that spans the length and breadth of the country dedicated to supplying time.
+
+[Ireland had recently launched their own National Timing Grid](https://www.rte.ie/news/business/2023/0919/1406003-irelands-first-ever-national-timing-grid-launches/) which I was fortunate enough to use on a recent project. There are a high number of Atomic clocks in Ireland which essentially is combined in a way with other networking protocols and high speed links to create a timing infrastructure.
+
+Put simply by David Fleming, NSAI:
+
+> Timing is one of the fundamental issues that allows everything to run in harmony
+
+<br>
+
 
 
