--- a/_posts/OT/2023-10-13-timesync.md
+++ b/_posts/OT/2023-10-13-timesync.md
@@ -6,17 +6,17 @@ categories: OT
 image: OT/timesync/white_rabbit.jpeg
 ---
 
-Everything that we take for granted from the electricity that powers our homes, browsing the internet, calling a friend on your mobile phone, tracking taxis on Uber, purchasing items online all require some form of postitional, navigation and timing (PNT) services. In addition to power grids, we heavily rely on other infrastructure such as hospitals, water-systems, transport networks, manufacturing and agriculture. These critical infrastructures are an essential part of a functioning society which ultimately life depends on and so the need to protect these infrastructures are of upmost importance and of national concern.
+All of our everyday conveniences from the electricity that powers our homes, the clean water running through our taps, browsing the internet, making phone calls, and purchasing items online all require some form of positional, navigation and timing (PNT) services. Additionally, people heavily rely on other infrastructure such as hospitals, transport networks, manufacturing, and agriculture. These critical infrastructures are an essential part of a functioning society upon which ultimately life depends. Therefore, the need to protect these infrastructures is of upmost importance and national concern.
 
-**So, what does time keeping have to do with critical infrastrucuture?**
+**So, what does timekeeping have to do with critical infrastrucuture?**
 
-Under the hood of each of these infrastructures is a web of complex interconnected cyber-physical systems that require 24/7/365 availability. Time synchronization, more importantly accurate and reliable time synchronization, is an essential part of what makes these systems tick. Without accurate time signals being supplied and distributed across these systems it could cause cataclysmic system failures such as:
+Under the hood of each of these infrastructures is a web of complex interconnected cyber-physical systems that require 24/7/365 availability. Time, more importantly, accurate and reliable time, is an essential part of what makes these systems tick. These distributed systems can span hundreds of miles, and demand precise synchronization to ensure uninterrupted functionality. Without precise time synchronization and reliable time signals being supplied to these systems it could cause cataclysmic system failures such as:
  
 - Blackouts on the power grid and massive power outages. [Paper](https://www.mdpi.com/1996-1073/15/18/6799)
 - Disrupting financial markets such as stock markets, finanical transactions and other trading platforms. Here is an example of the Dow ["flash crash"](https://radionavlab.ae.utexas.edu/images/stories/files/papers/summary_financial_sector_implications.pdf)
 - Interrupt remote robotic surgeries in hospitals, scheduling systems and medical devices used for patient care, monitoring, treatment and diagnosis. [Link1](https://timemachinescorp.com/2018/01/17/time-synchronization-crucial-healthcare-industry/),[Link2](https://safran-navigation-timing.com/synchronized-time-improves-healthcare/)  
 - Disrupting Telecom operators causing dropped calls and slow internet speed.
-- Traffic accidents and delays as traffic management systems depend on accurate timekeeping.
+- Traffic accidents and delays as traffic management systems depend on precise time synchronization.
 
 It wouldn't be Armageddon but it would not be a situation that any society could afford to happen.
 For accurate time synchronization to occur, we need a time source.
@@ -31,11 +31,11 @@ Atomic clocks are usually used in places that GPS can't reach such as underwater
 | *Illustrating how GPS works*|
 
 
-Time in critical infrastuctures is typically sourced from GPS (Global Positioning System), a type of satellite based positioning, navigation and timing (PNT) system. The current problem with GPS within critical infrastructures is that these infrastructures are far [too reliant on GPS](https://wsts.atis.org/wp-content/uploads/2022/05/01-James-Platt.Over-Reliance-on-the-GPS-System-.pdf) with many systems having no backup alternative to this single point of failure if GPS is disrupted. Adding to the fact the huge [security threats GPS pose](https://www.securitymagazine.com/blogs/14-security-blog/post/98179-global-navigation-in-cyberspace-gps-and-threats-to-national-defense) such as jamming attacks and GPS spoofers which can be created using inexpensive off the shelf equipment with no little know-how. These type of attacks on GPS could have catastrophic impacts on critical infrastructre. 
+In critical infrastructures, time is typically synchronized with GPS (Global Positioning System), a satellite-based positioning, navigation, and timing (PNT) system. However, a significant problem currently is [critical infrastructure's heavy reliance on GPS](https://wsts.atis.org/wp-content/uploads/2022/05/01-James-Platt.Over-Reliance-on-the-GPS-System-.pdf), as many of these systems lack backup alternatives, making them vulnerable to disruptions. Furthermore, the [security threats posed by GPS](https://www.securitymagazine.com/blogs/14-security-blog/post/98179-global-navigation-in-cyberspace-gps-and-threats-to-national-defense) are particularly concerning, such as jamming attacks and GPS spoofers which can be created using inexpensive off the shelf equipment with no little know-how.
 
 A 2019 study estimated that if a 30 day GPS outage occured on several critical infrastructures it would cost the U.S. economy at least $1 billion per day. Here is the full [RTI report.](https://www.rti.org/news/new-report-reveals-economic-benefits-private-sector-use-gps) 
 
-**I can start to see the fine dance between time within our critical infrastructures but what can we do about it?**
+**There is a delicate balance between time synchronization within our critical infrastructures. What can we do about it?**
 
 One of the efforts being spearheaded by NIST is to develop non-GPS based alternatives as well as developing systems that distribute time via fiber-optics and radio to back up GPS and bolster resilency.
 
@@ -43,9 +43,11 @@ One of the efforts being spearheaded by NIST is to develop non-GPS based alterna
 
 <br>
 
-Governments around the world are already making strides building out their own National Timing Grid. An entire grid that spans the length and breadth of the country dedicated to supplying time.
+Governments around the world are making significant strides to building out their own National Timing Grid- a dedicated network that spans the length and breadth of the country dedicated soley to supplying time.
 
-[Ireland had recently launched their own National Timing Grid](https://www.rte.ie/news/business/2023/0919/1406003-irelands-first-ever-national-timing-grid-launches/) which I was fortunate enough to use on a recent project. There are a high number of Atomic clocks in Ireland which essentially is combined in a way with other networking protocols and high speed links to create a timing infrastructure.
+[The UK launched the world's first timing centre in 2020 aimed to safeguarding the UK from the potential risks of satellite failures](https://www.gov.uk/government/news/worlds-first-timing-centre-to-protect-uk-from-risk-of-satellite-failure).
+
+[Ireland had also recently launched their own National Timing Grid in Sep 2023](https://www.rte.ie/news/business/2023/0919/1406003-irelands-first-ever-national-timing-grid-launches/). I had the privilege utilizing this network on a recent project. Ireland boasts a high number of atomic clocks which essentially is combined with networking protocols and high-speed links to form a robust a timing infrastructure.
 
 Put simply by David Fleming, NSAI:
 
