updated time sync and about page

--- a/_posts/OT/2023-10-13-timesync.md
+++ b/_posts/OT/2023-10-13-timesync.md
@@ -10,7 +10,7 @@ All of our everyday conveniences from the electricity that powers our homes, the
 
 **So, what does timekeeping have to do with critical infrastrucuture?**
 
-Under the hood of each of these infrastructures is a web of complex interconnected cyber-physical systems that require 24/7/365 availability. Time, more importantly, accurate and reliable time, is an essential part of what makes these systems tick. These distributed systems can span hundreds of miles, and demand precise synchronization to ensure uninterrupted functionality. Without precise time synchronization and reliable time signals being supplied to these systems it could cause cataclysmic system failures such as:
+Under the hood of each of these infrastructures is a web of complex interconnected cyber-physical systems that require 24/7/365 availability. Time, more importantly, accurate and reliable time, is an essential part of what makes these systems tick. These distributed systems can span hundreds of miles,  demand precise synchronization to ensure uninterrupted functionality. Without precise time synchronization and reliable time signals being supplied to these systems it could cause cataclysmic system failures such as:
  
 - Blackouts on the power grid and massive power outages. [Paper](https://www.mdpi.com/1996-1073/15/18/6799)
 - Disrupting financial markets such as stock markets, finanical transactions and other trading platforms. Here is an example of the Dow ["flash crash"](https://radionavlab.ae.utexas.edu/images/stories/files/papers/summary_financial_sector_implications.pdf)
@@ -31,7 +31,7 @@ Atomic clocks are usually used in places that GPS can't reach such as underwater
 | *Illustrating how GPS works*|
 
 
-In critical infrastructures, time is typically synchronized with GPS (Global Positioning System), a satellite-based positioning, navigation, and timing (PNT) system. However, a significant problem currently is [critical infrastructure's heavy reliance on GPS](https://wsts.atis.org/wp-content/uploads/2022/05/01-James-Platt.Over-Reliance-on-the-GPS-System-.pdf), as many of these systems lack backup alternatives, making them vulnerable to disruptions. Furthermore, the [security threats posed by GPS](https://www.securitymagazine.com/blogs/14-security-blog/post/98179-global-navigation-in-cyberspace-gps-and-threats-to-national-defense) are particularly concerning, such as jamming attacks and GPS spoofers which can be created using inexpensive off the shelf equipment with no little know-how.
+In critical infrastructures, time is typically synchronized with GPS (Global Positioning System), a satellite-based positioning, navigation, and timing (PNT) system. However, a significant problem currently is [critical infrastructure's heavy reliance on GPS](https://wsts.atis.org/wp-content/uploads/2022/05/01-James-Platt.Over-Reliance-on-the-GPS-System-.pdf), as many of these systems lack backup alternatives, making them vulnerable to disruptions. Furthermore, the [security threats posed by GPS](https://www.securitymagazine.com/blogs/14-security-blog/post/98179-global-navigation-in-cyberspace-gps-and-threats-to-national-defense) are particularly concerning, such as jamming attacks and GPS spoofers which can be created using inexpensive off the shelf equipment with little know-how.
 
 A 2019 study estimated that if a 30 day GPS outage occured on several critical infrastructures it would cost the U.S. economy at least $1 billion per day. Here is the full [RTI report.](https://www.rti.org/news/new-report-reveals-economic-benefits-private-sector-use-gps) 
 
@@ -52,6 +52,8 @@ Governments around the world are making significant strides to building out thei
 Put simply by David Fleming, NSAI:
 
 > Timing is one of the fundamental issues that allows everything to run in harmony
+
+It's clear that the future of critical infrastructure will be built upon the foundation of resilient timekeeping, providing us with the confidence these vital systems can run in perfect harmony even when facing disruptions.
 
 <br>
 
