updated time sync and about page

--- a/_posts/OT/2023-10-13-timesync.md
+++ b/_posts/OT/2023-10-13-timesync.md
@@ -8,7 +8,7 @@ image: OT/timesync/white_rabbit.jpeg
 
 All of our everyday conveniences from the electricity that powers our homes, the clean water running through our taps, browsing the internet, making phone calls, and purchasing items online all require some form of positional, navigation and timing (PNT) services. Additionally, people heavily rely on other infrastructure such as hospitals, transport networks, manufacturing, and agriculture. These critical infrastructures are an essential part of a functioning society upon which ultimately life depends. Therefore, the need to protect these infrastructures is of upmost importance and national concern.
 
-**So, what does timekeeping have to do with critical infrastrucuture?**
+**So, what does timekeeping have to do with critical infrastructure?**
 
 Under the hood of each of these infrastructures is a web of complex interconnected cyber-physical systems that require 24/7/365 availability. Time, more importantly, accurate and reliable time, is an essential part of what makes these systems tick. These distributed systems can span hundreds of miles,  demand precise synchronization to ensure uninterrupted functionality. Without precise time synchronization and reliable time signals being supplied to these systems it could cause cataclysmic system failures such as:
  
